# SuperMew

./: pyproject.toml  test_langsmith_eval.py
SuperAgent/: README.md
SuperAgent/backend/: agent.py  api.py  app.py  schemas.py  tools.py
SuperAgent/frontend/: index.html  script.js  style.css
backend/: agent.py  api.py  app.py  document_loader.py  embedding.py  milvus_client.py  milvus_writer.py  rag_pipeline.py  rag_utils.py  tools.py
frontend/: index.html  script.js
study/: 01.ipynb  01SmartTranslator.py  02.ipynb  02SmartTextGenerator.py  03.ipynb  03AgentwithTool.py  04.ipynb
